# giV

./: .gitignore  LICENSE  README.md  TODO  giV.cabal  giVcfg.yaml  gitV.cabal  stack.yaml
src/: Args.hs  Create.hs  Debugging.hs  Fetch.hs  Instances.hs  Main.hs  Parse.hs  Process.hs  Result.hs  Test.hs  Types.hs  Utils.hs  Version.hs
src/IO/: Cfg.hs  Fetch.hs
