name:                giV
version:             0.1.0.0
license-file:        LICENSE
author:              Martin Buck
maintainer:          buckmartin@buckmartin.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable giV
  main-is:             Main.hs
  other-modules:       Types
                     , Utils
                     , Args
                     , IO.Fetch
                     , IO.Cfg
                     , Process
                     , Parse
                     , Version
                     , Instances
                     , Debugging
                     , Create

  build-depends:       base >=4.11 && <4.12
                     , process
                     , directory
                     , optparse-applicative
                     , string-conversions
                     , attoparsec
                     , bytestring
                     , containers
                     , split
                     , yaml
                     , regex-tdfa
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror
  extensions:          DuplicateRecordFields
                     , RecordWildCards
                     , OverloadedStrings
                     , StandaloneDeriving
                     , FlexibleContexts
                     , UndecidableInstances
                     , DeriveGeneric
