name:                giV
version:             0.1.0.0
license-file:        LICENSE
author:              Martin Buck
maintainer:          buckmartin@buckmartin.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable giV
  main-is:             Main.hs
  other-modules:       Types
                     , Utils
                     , Args
                     , IO.Fetch
                     , IO.Cfg
                     , Process
                     , Parse
                     , Version
                     , Instances
                     , Debugging
                     , Create
                     , Result

  build-depends:       base >=4.11 && <4.12
                     , process
                     , directory
                     , optparse-applicative
                     , string-conversions
                     , attoparsec
                     , bytestring
                     , containers
                     , split
                     , yaml
                     , aeson
                     , regex-tdfa
                     , regex-tdfa-text
                     , mtl
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror
  extensions:          DuplicateRecordFields
                     , RecordWildCards
                     , OverloadedStrings
                     , StandaloneDeriving
                     , FlexibleContexts
                     , UndecidableInstances
                     , DeriveGeneric


test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  main-is:             Test.hs
  other-modules:       Types
                     , Utils
                     , Args
                     , IO.Fetch
                     , IO.Cfg
                     , Process
                     , Parse
                     , Version
                     , Instances
                     , Debugging
                     , Create
                     , Result
  build-depends:       base >=4.11 && <4.12
                     , process
                     , directory
                     , optparse-applicative
                     , string-conversions
                     , attoparsec
                     , bytestring
                     , containers
                     , split
                     , yaml
                     , aeson
                     , regex-tdfa
                     , regex-tdfa-text
                     , mtl
                     , text

                     , hspec
                     , QuickCheck

  hs-source-dirs:      src/
  ghc-options:         -W -fwarn-incomplete-patterns -Werror
  extensions:          DuplicateRecordFields
                     , RecordWildCards
                     , OverloadedStrings
                     , StandaloneDeriving
                     , FlexibleContexts
                     , UndecidableInstances
                     , DeriveGeneric

